@@ -32,34 +32,10 @@ export const getBorderNodeExtent = (
 ): CoordinateExtent | 'parent' => {
   let coordinateExtent: CoordinateExtent | 'parent' = 'parent';
   if (nodeParent.width && nodeParent.height && borderNorde.height && borderNorde.width) {
-    switch (borderNorde.data.borderNodePosition) {
-      case BorderNodePositon.EAST:
-        coordinateExtent = [
-          [nodeParent.width, 0],
-          [nodeParent.width, nodeParent.height - borderNorde.height],
-        ];
-        break;
-      case BorderNodePositon.NORTH:
-        coordinateExtent = [
-          [0 - borderNorde.width * 0.8, 0 - borderNorde.height],
-          [nodeParent.width - borderNorde.width * 0.3, 0 - borderNorde.height],
-        ];
-        break;
-      case BorderNodePositon.SOUTH:
-        coordinateExtent = [
-          [0 - borderNorde.width * 0.8, nodeParent.height],
-          [nodeParent.width - borderNorde.width * 0.3, nodeParent.height],
-        ];
-        break;
-      case BorderNodePositon.WEST:
-        coordinateExtent = [
-          [0 - borderNorde.width, 0],
-          [0 - borderNorde.width, nodeParent.height - borderNorde.height],
-        ];
-        break;
-      default:
-        coordinateExtent = 'parent';
-    }
+    coordinateExtent = [
+      [0 - borderNorde.width, 0 - borderNorde.height],
+      [nodeParent.width, nodeParent.height],
+    ];
   }
   return coordinateExtent;
 };
